--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,79 @@
+/* common */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/* container flex */
+.flex_container{
+    display: flex;
+    width: 80%;
+    margin: auto;
+    padding: 1rem;
+}
+
+/* column */
+.col-5{
+    width: calc((100% / 12) * 5);
+    padding: 1rem;
+}
+
+/* header */ 
+.site_header{
+    width: 100%;
+    height: 80px;
+}
+
+.header_logo{
+    width: 20%;
+}
+
+.row_menu_bar{
+    justify-content: space-between;
+    display: flex;
+    margin: auto;
+    width: 70%;
+}
+
+.header_login{
+    width: 10%;
+}
+
+#log_button{
+    border: none;
+    padding: 1rem;
+    font: inherit;
+}
+
+
+
+/*Debug*/
+.debug .site_header{
+    background-color: red;
+}
+
+.debug .site_header .flex_container{
+    height: 100%;
+    background: #ededed;
+}
+
+.debug .header_logo{
+    background: yellow;
+    height: 40px;
+}
+
+.debug .row_menu_bar{
+    background: black;
+    height: 3rem;
+    width: 70rem;
+}
+
+.debug .col-5{
+    background-color: white;
+    border: 2px solid black;
+}
+
+.debug .header_login{
+    background-color: yellow;
 }
