--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,15 @@
 
 /* container flex */
 .flex_container{
-    display: flex;
     width: 80%;
     margin: auto;
-    padding: 1rem;
 }
+
+.section_bg, .image_content, .text_content, .download_open_bg, .row_menu_bar, .flex_container, .header_login, .header_logo{
+    display: flex;
+    margin: auto;
+}
+
 
 /* column */
 .col-5{
@@ -30,7 +34,6 @@
 }
 
 .row_menu_bar{
-    display: flex;
     justify-content: space-between;
     width: 75%;
     margin: 0 1rem;
@@ -44,11 +47,20 @@
 
 
 /* MAIN */
-
-/* Download Discord or Open in browser */
 .download_open_bg{
     width: 100%;
-    display: flex;
+}
+
+.section_bg{
+    width: 100%;
+}
+
+.image_content{
+    width: 60%;
+}
+
+.text_content{
+    width: 40%;
 }
 
 
@@ -95,4 +107,27 @@
     height: 20rem;
     border: 0.3rem dotted black;
 }
-/* ---/.DEBUG--- */
+
+.debug .section_bg{
+    height: 40rem;
+    background: blue;
+    border: 0.3rem dashed white;
+}
+
+.debug .image_content{
+    height: 20rem;
+    background: white;
+    border: 0.2rem solid grey;
+}
+
+.debug .text_content{
+    height: 20rem;
+    background: yellow;
+    border: 0.2rem dotted green;
+}
+
+.debug .section_bg .flex_container{
+    height: 30rem;
+    background: orange;
+    border: 0.3rem solid black;
+}
