--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,15 @@
     box-sizing: border-box;
 }
 
-/* container flex */
-.site_header, .flex_container_header, .section_bg, .image_content, .text_content, .download_open_bg, .row_menu_bar, .flex_container, .header_login, .header_logo, .footer_top, .footer_bottom, .footer_nav, .logo_footer, .sign_in_footer{
+.d-flex{
     display: flex;
+}
+
+.m-auto{
     margin: auto;
+}
+
+.w-80{
     width: 80%;
 }
 
@@ -19,18 +24,13 @@
 }
 
 .col-4{
-    width: calc((100% / 12) *4);
+    width: calc((100% / 12) * 4);
 }
 
 /* HEADER */ 
 .site_header{
     width: 100%;
     height: 80px;
-}
-
-.flex_container_header{
-    width: 80%;
-    margin: auto;
 }
 
 .header_logo{
@@ -62,20 +62,21 @@
 }
 
 /* FOOTER */
-footer .footer_top .flex_container{
+.left_top_footer{
     width: 35%;
+}
+
+.footer_nav{
+    width: 100%;
 }
 
 .footer_top{
     border-bottom: 0.1rem blue solid;
 }
 
-.logo_footer{
-    margin-left: 0;
-}
-
-.sign_in_footer{
-    margin-right: 0;
+.footer_bottom{
+    justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -85,7 +86,7 @@ footer .footer_top .flex_container{
     border: 0.3rem dashed green;
 }
 
-.debug .site_header .flex_container_header{
+.debug .site_header .container_header{
     height: 100%;
     background: #ededed;
     border: 0.3rem dotted black;
@@ -156,7 +157,7 @@ footer .footer_top .flex_container{
     background: purple;
 }
 
-.debug footer .footer_top .flex_container{
+.debug footer .left_top_footer{
     height: 18rem;
     background: yellow;
     border: 0.3rem solid orange;
@@ -187,5 +188,5 @@ footer .footer_top .flex_container{
 .debug footer .footer_bottom .sign_in_footer{
     height: 2rem;
     width: 5rem;    
-    background: #000000;
+    background: #00a0eb;
 }
